# claude-native

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  COMPETITORS.md  Cargo.toml  GOLDEN_RULES.md  README.md  TASKS.md  TOKEN_OPTIMIZATION.md  brainstorm-competitive-landscape-2026-03-29.md
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md
.claude/rules/: rule-implementation.md
.github/workflows/: ci.yml
docs/: index.html
docs/adr/: 001-rust-over-typescript.md
src/: CLAUDE.md  cli.rs  config.rs  diff.rs  fix.rs  history.rs  hooks.rs  init.rs  lib.rs  main.rs  mcp.rs  multi_tool.rs  token_cost.rs  watch.rs
src/detection/: CLAUDE.md  domain.rs  mod.rs  signals.rs  signals_backend.rs
src/output/: mod.rs  terminal.rs
src/rules/: CLAUDE.md  context.rs  context_extra.rs  drift.rs  foundation.rs  foundation_extra.rs  mod.rs  navigation.rs  navigation_extra.rs  quality.rs  quality_extra.rs  token_checks.rs  token_rules.rs  token_suggestions.rs  tooling.rs
tests/: backend_rules_tests.rs  codegen_rules_tests.rs  config_tests.rs  context_rules_tests.rs  detection_tests.rs  diff_tests.rs  doc_site_rules_tests.rs  drift_tests.rs  fix_tests.rs  foundation_tests.rs  game_dev_rules_tests.rs  helpers.rs  history_tests.rs  hooks_tests.rs  iac_rules_tests.rs  init_tests.rs  integration_tests.rs  legacy_rules_tests.rs  mcp_tests.rs  ml_rules_tests.rs  mobile_rules_tests.rs  monorepo_rules_tests.rs  multi_tool_tests.rs  navigation_rules_tests.rs  polyglot_rules_tests.rs  project_specific_tests.rs  quality_rules_tests.rs  rules_tests.rs  scan_tests.rs  scoring_tests.rs  serverless_rules_tests.rs  token_cost_tests.rs  tooling_rules_tests.rs  watch_tests.rs  weights_tests.rs
(+23 files in other folders)
