[package]
name = "claude-native"
version = "0.2.0"
edition = "2021"
description = "Scan any project and score how Claude Native it is — optimized for AI-assisted development"
license = "MIT"
repository = "https://github.com/viveky259259/claude-native"
homepage = "https://github.com/viveky259259/claude-native"
readme = "README.md"
keywords = ["claude", "ai", "developer-tools", "linter", "scoring"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["GOLDEN_RULES.md", "TASKS.md", "tests/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
globset = "0.4"
serde_yaml = "0.9"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
